@@ -153,3 +153,4 @@ from PresetsOnlyParameterValueWidget import PresetsOnlyParameterValueWidget
 from CompoundParameterValueWidget import CompoundParameterValueWidget
 from PathParameterValueWidget import PathParameterValueWidget
 from PathVectorParameterValueWidget import PathVectorParameterValueWidget
+from StringParameterValueWidget import StringParameterValueWidget
