@@ -1,5 +1,11 @@
 * Added a StandardNodeGadget::acceptsNodule() method which may be reimplemented by derived classes to control exactly which plugs are represented by the gadget. See GafferUITest.StandardNodeGadgetTest.testSubclassing() for an example.
 
+* GafferUI.StringPlugValueWidget now exposes the internal TextWidget with a textWidget() method.
+
+* GafferUI.TextWidget now supports password style text display, settable with the displayMode constructor parameter, or the setDisplayMode() method.
+
+* New StringParameterValueWidget supports ["UI"]["password"] parameter userData.
+
 0.15.1
 ------
 
